# Local-Movie-Database

./: .gitignore  CMakeLists.txt  README.md  Utils.cpp  Utils.h  main.cpp  validator.cpp  validator.h  watchlist.html
Exceptions/: Exceptions.cpp  Exceptions.h
WatchList/: WatchList.cpp  WatchList.h
domain/: domain.cpp  domain.h
repository/: CSVRepository.cpp  CSVRepository.h  FileWatchlist.cpp  FileWatchlist.h  HTMLRepository.cpp  HTMLRepository.h  IRepository.h  Repository.cpp  Repository.h  TextfileRepository.cpp  TextfileRepository.h
service/: Service.cpp  Service.h
tests/: Tests.cpp  Tests.h
ui/: AdminGUI.cpp  AdminGUI.h  AdminLoginDialog.cpp  AdminLoginDialog.h  BarChartWidget.cpp  BarChartWidget.h  MainWindow.cpp  MainWindow.h  Ui.cpp  Ui.h  UserGUI.cpp  UserGUI.h  file.h  gui.cpp  gui.h  mode.cpp  mode.h  repotype.cpp  repotype.h
